# fakeworld

./: .dockerignore  .env.defaults  Dockerfile  Makefile  README.md  fakeworld.cabal  populate.sql  schema.sql
app/: Env.hs  Main.hs  Options.hs  Server.hs  TUI.hs
app/API/: Common.hs  Defaults.hs  Request.hs
app/API/Request/: Endpoints.hs  Types.hs
app/API/Response/: Types.hs
app/Env/: Defaults.hs
app/Server/: DB.hs  DummyDB.hs
app/Server/DB/: Session.hs  Statement.hs  Types.hs
app/TUI/: Common.hs  Events.hs  Layout.hs  Links.hs  Pages.hs  Style.hs  Types.hs
app/TUI/Common/: Links.hs
app/TUI/Layout/: Footer.hs  Header.hs
app/TUI/Pages/: Article.hs  HomePage.hs  NotImplemented.hs
db_dummy/: article.csv  comment.csv  profile.csv
test/: Test.hs
test/Test/: API.hs
