cabal-version:      3.0
name:               fakeworld
version:            0.1.0.0
synopsis:           TUI implementation of RealWorld frontend
-- description:
license:            NONE
author:             Amir Dekel
maintainer:         6893125+adql@users.noreply.github.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall
    build-depends:
                    aeson ^>=2.1.1.0
                  , async ^>=2.2.4
                  , base ^>=4.16.3.0
                  , brick ^>=1.5
                  , bytestring ^>=0.11.3.1
                  , dotenv ^>=0.10.0.0
                  , hasql ^>=1.6.3
                  , hasql-dynamic-statements ^>=0.3.1.2
                  , hasql-th ^>=0.4.0.18
                  , http-conduit ^>=2.3.8
                  , http-types ^>=0.12.3
                  , mtl ^>=2.2.2
                  , optparse-applicative ^>= 0.17.0.0
                  , servant-client ^>=0.19
                  , servant-server ^>=0.19.2
                  , text ^>=2.0.1
                  , time ^>=1.12.2
                  , vector ^>=0.13.0.0
                  , vty ^>=5.37
                  , wai ^>=3.2.3
                  , warp ^>=3.3.23
    default-language: GHC2021
    ghc-options:
        -threaded

executable fakeworld
    import:           common
    main-is:          Main.hs
    other-modules:
        API.Common
        API.Request
        API.Request.Types
        API.Response.Types
        Env
        Env.Defaults
        Options
        Server
        Server.DB
        Server.DB.Session
        Server.DB.Statement
        Server.DB.Types
        TUI
        TUI.Events
        TUI.Common
        TUI.Common.Links
        TUI.Layout
        TUI.Pages
        TUI.Pages.Article
        TUI.Pages.HomePage
        -- for development:
        TUI.Pages.NotImplemented
        TUI.Style
        TUI.Types
    hs-source-dirs:   app

test-suite test
    import:           common
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:    base >= 4 && < 5
    default-language: GHC2021
    hs-source-dirs:   test, app
